--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,11 @@
 theme: jekyll-theme-cayman
 title: Fabian Stöckl
 email: yu@lijiayu.net
+
+colors:
+    gradient_left: "#155799"
+    gradient_right: "#159957"
+    header: "#fff"
+    android_theme: "#000" # this default to gradient_color
+    link: "#1e6bb8" # this default to gradient_color
+    section_title: "#155799" # this default to gradient_color
