--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: jekyll-theme-cayman
 title: Fabian Stöckl
 email: yu@lijiayu.net
 
-logo_url: https://www.diw.de/sixcms/media.php/37/thumbnails/FStoeckl.jpg.546586.jpg # Either absolute or relative url
+logo_url: /fabian.png # Either absolute or relative url
 
 colors:
     gradient_left: "#155799"
