--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,4 @@
 theme: jekyll-theme-minimal
 title: Fabian Stöckl
-email: yu@lijiayu.net
 
-logo_url: /fabian.png # Either absolute or relative url
-
-colors:
-    gradient_left: "#155799"
-    gradient_right: "#159957"
-    header: "#fff"
-    android_theme: "#000" # this default to gradient_color
-    link: "#1e6bb8" # this default to gradient_color
-    section_title: "#155799" # this default to gradient_color
+logo: /fabian.png # Either absolute or relative url
