--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
 title: Fabian Stöckl
 
 logo: /fabian.png # Either absolute or relative url
