--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-minimal
 title: Fabian Stöckl
+description: [A short description of your site's purpose]
 
 logo: /fabian.png # Either absolute or relative url
