--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 theme: jekyll-theme-minimal
 
 logo: /fabian.png # Either absolute or relative url
+
+url: "https://example.com" # the base hostname & protocol for your site
+plugins:
+  - jekyll-sitemap
