--- a/_config.yml
+++ b/_config.yml
@@ -7,5 +7,5 @@ plugins:
   - jekyll-sitemap
   
   
-title: Website
-description: Dr. Fabian Stöckl - Economist
+title: Dr. Fabian Stöckl
+description: Economist
