--- a/_config.yml
+++ b/_config.yml
@@ -7,5 +7,5 @@ plugins:
   - jekyll-sitemap
   
   
-title: Dr. Fabian Stöckl
-description: Economist
+title: Dr. Fabian Stöcklconf
+description: Economistconf
