--- a/_config.yml
+++ b/_config.yml
@@ -7,5 +7,5 @@ plugins:
   - jekyll-sitemap
   
   
-title: Dr. Fabian Stöckl | Economist
-description: Economistconf
+title: Dr. Fabian Stöckl
+description: Economist and some more stuff ...
