--- a/_config.yml
+++ b/_config.yml
@@ -7,5 +7,5 @@ plugins:
   - jekyll-sitemap
   
   
-title: Dr. Fabian Stöckli &#124; bla
+title: Dr. Fabian Stöckl &#124; Economist
 #description: Economist
